fixed issues on alignment with responsie design

--- a/src/scss/components/_images.scss
+++ b/src/scss/components/_images.scss
@@ -3,8 +3,8 @@
 
   img {
     @include for-tablet-landscape-up {
-      width: 500px;
-      height: 500px;
+      width: 450px;
+      height: 450px;
     }
     width: 290px;
     height: 290px;
@@ -46,5 +46,5 @@
   flex-wrap: wrap;
   gap: 20px;
   width: 60vw;
-  margin: 0 20vw;
+  margin: 0 18vw;
 }
