--- a/src/scss/components/_posts-nav.scss
+++ b/src/scss/components/_posts-nav.scss
@@ -4,7 +4,7 @@
     margin: 30px 0;
   }
   border-top: 1px solid $inactive-text;
-  margin: 0 20vw;
+  // margin: 0 10vw;
   margin-top: 30px;
 
   div {
