--- a/src/scss/components/_top-navbar.scss
+++ b/src/scss/components/_top-navbar.scss
@@ -9,7 +9,7 @@
   border-bottom: 1px solid $inactive-text;
   border-left: 10vw solid transparent;
   border-right: 10vw solid transparent;
-  width: 100vw;
+  width: 95vw;
 }
 
 .navbar-left {
